# PL-Compiler

./: .gitignore  CMakeLists.txt  README.md
demos/: Fibonacci_numbers.txt  add_procedure  add_procedure.txt  algebra.txt  boolean.txt  bubble_sort.txt  comparisons.txt  recursion.txt  reverse_list.txt
docs/: grammar.txt  pl_grammar.tex  technical_doc.tex
include/: block_table.h  compiler.h  parser.h  scanner.h  symbol.h  symbol_table.h  token.h
interpreter/: CMakeLists.txt  driver.cc  interp.cc
scanner/include/: scanner.h  symbol.h  symbol_table.h  token.h
scanner/src/: scanner.cpp  symbol_table.cpp  token.cpp
src/: CMakeLists.txt  block_table.cpp  compiler.cpp  main.cpp  parser.cpp  scanner.cpp  symbol_table.cpp
test/: CMakeLists.txt  error_test_program.pl  test_parser.cpp  test_scanner.cpp
test/src_files/: parser_scratch.pl  parser_tmp.pl  token_types  valid_test_program.pl
test/src_files/scan/: invalid  proc_names
test/src_files/scope/: array_redefined  const_redefined  mixed_redefines  nested_funcs  no_redefines  proc_redefined  redefined_in_func  var_redefined  vars_undefined
test/src_files/type/: array_size  assigning_arithmetic  assigning_comparisons  assigning_literals  assigning_procs  guarded_commands  read_write
